# canopy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  coverage.yml  release.yml
.handoffs/canopy/: verify-annotation-dispatch-policy.sh
docs/: ARCHITECTURE.md  MVP.md  README.md  architecture.md  capability-vocabulary.md
docs/plans/: README.md
src/: api.rs  app.rs  capability.rs  cli.rs  db.rs  dispatch.rs  handoff_check.rs  lib.rs  main.rs  models.rs  runtime.rs  scope.rs  store.rs
src/api/: allowed_actions.rs  attention.rs  context.rs  operator_actions.rs  sla.rs  views.rs
src/app/: commands.rs  server.rs
src/mcp/: mod.rs  protocol.rs  schema.rs  server.rs
src/store/: agents.rs  assignments.rs  council.rs  dag.rs  events.rs  evidence.rs  files.rs  handoffs.rs  helpers.rs  mod.rs  notifications.rs  operator_actions.rs  orchestration.rs  outcomes.rs  permission_rules.rs  policy_events.rs  relationships.rs  schema.rs  tasks.rs  tool_usage.rs  traits.rs
src/store/helpers/: collaboration.rs  core.rs  mappers.rs  (+4 more)
src/tasks/: dag.rs  mod.rs  output.rs
src/tools/: completeness.rs  council.rs  dag.rs  evidence.rs  files.rs  handoff.rs  identity.rs  import.rs  metadata.rs  mod.rs  outcomes.rs  policy.rs  queue.rs  scope.rs  task.rs  tool_adoption.rs
tests/: api_snapshot.rs  cli.rs  contract_alignment.rs  foundation_alignment.rs  notification_contract.rs  schema_drift.rs  septa_contract.rs  store_roundtrip.rs  task_decompose_relationships.rs  task_tree_behavior.rs  workflow_ledger_alignment.rs
