[package]
name = "canopy"
version = "0.5.14"
edition = "2024"
rust-version = "1.85"
authors = ["William Newton"]
description = "Task-scoped coordination runtime for the Basidiocarp ecosystem"
license = "MIT"
repository = "https://github.com/basidiocarp/canopy"
keywords = ["basidiocarp", "agents", "orchestration", "cli", "coordination"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "canopy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
spore = { git = "https://github.com/basidiocarp/spore", tag = "v0.4.9" }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
ulid = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
